[gd_scene load_steps=17 format=3 uid="uid://r6wtvva5qput"]

[ext_resource type="Script" uid="uid://bqpbd5d44eaxh" path="res://scenes/GUIManager.gd" id="1_d2r44"]
[ext_resource type="Theme" uid="uid://bi2ve4mbgqqd0" path="res://fonts/Izayoi_Theme_setup.tres" id="1_puiy8"]
[ext_resource type="Texture2D" uid="uid://bhofondcn84ew" path="res://sprites/UIPanel.png" id="7_llyu2"]
[ext_resource type="Script" uid="uid://bsvach1mh5p1p" path="res://scenes/Debug.gd" id="10_pjuly"]
[ext_resource type="Script" uid="uid://cads6wf5xteti" path="res://scenes/FailScreen.gd" id="12_jkf6w"]
[ext_resource type="PackedScene" uid="uid://b5573gpwpupav" path="res://audio/audio_hub.tscn" id="13_dq5sw"]
[ext_resource type="Script" uid="uid://c2khcu02r73nu" path="res://scenes/WinScreen.gd" id="13_jghgq"]
[ext_resource type="PackedScene" uid="uid://b1bjxokhen2uf" path="res://scenes/fader.tscn" id="13_kppqt"]
[ext_resource type="AudioStream" uid="uid://c0yfjqq72v7te" path="res://audio/SFX/GUI/scrolling.ogg" id="13_rjwae"]
[ext_resource type="AudioStream" uid="uid://bfk0htbefbjo8" path="res://audio/SFX/GUI/confirm.ogg" id="15_1ih3f"]
[ext_resource type="Texture2D" uid="uid://ctghq2fkc43vl" path="res://sprites/ERROR.png" id="15_5mgdm"]
[ext_resource type="AudioStream" uid="uid://di3acidkui1qu" path="res://audio/SFX/GUI/deny.ogg" id="15_dq5sw"]
[ext_resource type="Script" uid="uid://cavxbmw8aekbj" path="res://scenes/expgain.gd" id="15_w87l3"]
[ext_resource type="Texture2D" uid="uid://bax2371rslxv7" path="res://sprites/HPbarBack.png" id="16_nw8x6"]
[ext_resource type="Texture2D" uid="uid://c5jpt0c2q47h6" path="res://sprites/HPbarUpper.png" id="17_a06i1"]
[ext_resource type="Texture2D" uid="uid://4jpuam16381u" path="res://sprites/HPbarProg.png" id="18_18bf3"]

[node name="GUIManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_puiy8")
script = ExtResource("1_d2r44")
metadata/_edit_use_anchors_ = true

[node name="PanelBlocker" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(121, 288)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FailScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("12_jkf6w")

[node name="ColorRect" type="ColorRect" parent="FailScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="FailScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.125
offset_right = 20.0
offset_bottom = 6.125
grow_horizontal = 2
grow_vertical = 2
text = "lmao you fucked up kiddo"

[node name="WinScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("13_jghgq")

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
self_modulate = Color(1, 1, 1, 0.278431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.125
offset_right = 20.0
offset_bottom = 6.125
grow_horizontal = 2
grow_vertical = 2
text = "winrar"

[node name="DEBUG" type="Control" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("10_pjuly")

[node name="PanelContainer" type="PanelContainer" parent="DEBUG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -228.0
offset_right = -100.0
offset_bottom = 128.0
grow_horizontal = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DEBUG/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="StateDebug" type="Label" parent="DEBUG/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "STATE"

[node name="focus" type="Label" parent="DEBUG/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "FOCUS"

[node name="UnitFocus" type="Label" parent="DEBUG/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "FOCUS"

[node name="DanmakuFocus" type="Label" parent="DEBUG/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "FOCUS"

[node name="VBoxContainer" type="VBoxContainer" parent="DEBUG/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GBStateLbl" type="Label" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GBState: "

[node name="GBState" type="Label" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GBStepLbl" type="Label" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "GBStep: "

[node name="GBStep" type="Label" parent="DEBUG/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ExpGain" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37
anchor_top = 0.65
anchor_right = 0.37
anchor_bottom = 0.66
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0
script = ExtResource("15_w87l3")

[node name="MC" type="MarginContainer" parent="ExpGain"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="SpriteBG" type="NinePatchRect" parent="ExpGain/MC"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
texture = ExtResource("7_llyu2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MC" type="MarginContainer" parent="ExpGain/MC"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="UnitPrt" type="TextureRect" parent="ExpGain/MC/MC"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("15_5mgdm")
expand_mode = 1
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="ExpGain"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="BG" type="NinePatchRect" parent="ExpGain/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
texture = ExtResource("7_llyu2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="LvUpMargin" type="MarginContainer" parent="ExpGain/PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="Vbox" type="VBoxContainer" parent="ExpGain/PanelContainer/LvUpMargin"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Header" type="HBoxContainer" parent="ExpGain/PanelContainer/LvUpMargin/Vbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="UnitLevelTag" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "Level:"

[node name="UnitLevel" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Header"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Header"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitName" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Header"]
layout_mode = 2
text = "Test Name"

[node name="HPCmpBox" type="HBoxContainer" parent="ExpGain/PanelContainer/LvUpMargin/Vbox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="UnitHpTag2" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../../Stats/UnitStrTag")
theme = ExtResource("1_puiy8")
text = "Health:"

[node name="UnitHp" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "60"
horizontal_alignment = 2

[node name="IncreaseHP" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitCmpTag" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../../Stats/UnitStrTag")
theme = ExtResource("1_puiy8")
text = "Composure:"

[node name="UnitCmp" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "60"
horizontal_alignment = 2

[node name="IncreaseCmp" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/HPCmpBox"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(0.788235, 0.682353, 0.0627451, 1)

[node name="HSeparator" type="HSeparator" parent="ExpGain/PanelContainer/LvUpMargin/Vbox"]
layout_mode = 2

[node name="Stats" type="GridContainer" parent="ExpGain/PanelContainer/LvUpMargin/Vbox"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 9

[node name="UnitStrTag" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../UnitMagTag")
theme = ExtResource("1_puiy8")
text = "Power:"

[node name="UnitStr" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitMagTag" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_puiy8")
text = "Magic:"

[node name="UnitMag" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase2" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitElegTag2" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_puiy8")
text = "Elegance:"

[node name="UnitEle" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase3" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitCeleTag3" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "Celerity:"

[node name="UnitCele" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase4" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitBarTag4" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "Barrier:"

[node name="UnitBar" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase5" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="UnitChaTag5" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_puiy8")
text = "Charisma:"

[node name="UnitCha" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("1_puiy8")
text = "0"

[node name="Increase6" type="Label" parent="ExpGain/PanelContainer/LvUpMargin/Vbox/Stats"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_puiy8")
theme_override_colors/font_color = Color(1, 0.894118, 0.301961, 1)

[node name="ExpMargin" type="MarginContainer" parent="ExpGain/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HC" type="HBoxContainer" parent="ExpGain/PanelContainer/ExpMargin"]
layout_mode = 2

[node name="expL" type="Label" parent="ExpGain/PanelContainer/ExpMargin/HC"]
layout_mode = 2
text = "test"
vertical_alignment = 1

[node name="expBar" type="TextureProgressBar" parent="ExpGain/PanelContainer/ExpMargin/HC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("16_nw8x6")
texture_over = ExtResource("17_a06i1")
texture_progress = ExtResource("18_18bf3")

[node name="Fader" parent="." instance=ExtResource("13_kppqt")]
layout_mode = 1

[node name="Fade" parent="Fader" index="0"]
color = Color(0, 0, 0, 1)

[node name="AudioHub" parent="." node_paths=PackedStringArray("audio_players") instance=ExtResource("13_dq5sw")]
audio_players = {
"Confirm": NodePath("Confirm"),
"Deny": NodePath("Deny"),
"FocusChange": NodePath("FocusChange")
}

[node name="FocusChange" type="AudioStreamPlayer" parent="AudioHub"]
stream = ExtResource("13_rjwae")

[node name="Confirm" type="AudioStreamPlayer" parent="AudioHub"]
stream = ExtResource("15_1ih3f")

[node name="Deny" type="AudioStreamPlayer" parent="AudioHub"]
stream = ExtResource("15_dq5sw")

[editable path="Fader"]
